kustomize/overlays/beta/afk-no/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-core-consumer-ressurs-kodeverk
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`beta.felleskomponent.no`) && (PathPrefix( `/ressurs/kodeverk`) && Headers(`x-org-id`, `afk.no`))"
      kind: Rule
      services:
        - name: fint-core-consumer-ressurs-kodeverk
          port: 8080
